--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
              
     
                 <meta charset="utf-8"/>
-<title>asdfou</title>
+<title>Boudreau Lab Website</title>
 <meta name="fb_admins_meta_tag" content=""/>
 <link rel="shortcut icon" href="http://" type="image/x-icon"/>
 <link rel="apple-touch-icon" href="http://" type="image/x-icon"/>
