--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <meta http-equiv="X-Wix-Published-Version" content="8"/>
 
 <meta http-equiv="etag" content="4f4e7218d2b26ba3aeed3943a46c1abf"/>
-<meta property="og:title" content="asdfou"/>
+<meta property="og:title" content="Boudreau Lab Website"/>
 <meta property="og:type" content="article"/>
 <meta property="og:url" content="boudreau-lab.github.io/research"/>
 <meta property="og:site_name" content="asdfou"/>
