--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <meta property="og:title" content="Boudreau Lab Website"/>
 <meta property="og:type" content="article"/>
 <meta property="og:url" content="boudreau-lab.github.io/research"/>
-<meta property="og:site_name" content="asdfou"/>
+<meta property="og:site_name" content="Boudreau Lab Website"/>
 <meta name="SKYPE_TOOLBAR" content="SKYPE_TOOLBAR_PARSER_COMPATIBLE"/>
 
 <meta id="wixMobileViewport" name="viewport" content="minimum-scale=0.25, maximum-scale=1.2"/>
